[gd_scene load_steps=13 format=2]

[ext_resource path="res://TitilliumWeb-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitilliumWeb-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/TagFinder.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.145098, 0.282353, 0.427451, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 3
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.27451, 0.411765, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.384314, 0.388235, 0.403922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="TagFinder" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.996
margin_bottom = -0.200012
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.321569, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="MC"]
margin_left = 20.0
margin_top = 20.0
margin_right = 430.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MC/VBC"]
margin_right = 410.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "TELT"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TAG" type="Label" parent="MC/VBC"]
margin_top = 22.0
margin_right = 410.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "TAGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TagListe" type="ScrollContainer" parent="MC/VBC"]
margin_top = 48.0
margin_right = 410.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 3 )
scroll_horizontal_enabled = false

[node name="VBC" type="VBoxContainer" parent="MC/VBC/TagListe"]
margin_left = 5.0
margin_top = 5.0
margin_right = 405.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EchoAll" type="OptionButton" parent="MC/VBC"]
margin_top = 243.0
margin_right = 410.0
margin_bottom = 273.0
rect_min_size = Vector2( 0, 30 )
hint_tooltip = "Max 19 tag!"
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "P1"
align = 1
items = [ "LQ", null, false, 0, null, "P1", null, false, 1, null, "DP", null, false, 2, null, "RP", null, false, 3, null, "Åpne alle tag i Echo (max 19 tag)", null, true, 4, null ]
selected = 1

[node name="Multifile" type="CheckBox" parent="MC/VBC"]
margin_top = 273.0
margin_right = 410.0
margin_bottom = 307.0
hint_tooltip = "PÅ ved opplasting til TagHub
Lagrer separate filer per platform. 
"
custom_fonts/font = SubResource( 7 )
pressed = true
text = "Separate filer for hver platform"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prefix" type="CheckBox" parent="MC/VBC"]
margin_top = 307.0
margin_right = 410.0
margin_bottom = 341.0
hint_tooltip = "PÅ ved opplasting til TagHub
Tar bort 190x fra TAG"
custom_fonts/font = SubResource( 7 )
pressed = true
text = "Fjern 1900 prefix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Taghub" type="CheckBox" parent="MC/VBC"]
margin_top = 341.0
margin_right = 410.0
margin_bottom = 375.0
hint_tooltip = "Åpener EchoHub når lister blir generert"
custom_fonts/font = SubResource( 7 )
text = "Åpne EchoHub ved generering"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="MC/VBC"]
margin_top = 375.0
margin_right = 410.0
margin_bottom = 407.0
custom_constants/separation = 5
alignment = 1

[node name="GenererLister" type="Button" parent="MC/VBC/HBC"]
margin_left = 98.0
margin_right = 205.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 20 )
hint_tooltip = "Lagrer .txt fil med TAG i
Documents"
custom_fonts/font = SubResource( 8 )
text = "Generer lister"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reload" type="Button" parent="MC/VBC/HBC"]
margin_left = 210.0
margin_right = 311.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 20 )
hint_tooltip = "Søker gjennom kopiert tekst på nytt"
custom_fonts/font = SubResource( 9 )
text = "Søk etter tag"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 44.0
text = "v2.1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="MC/VBC/EchoAll" to="." method="_on_Open_Echo_all"]
[connection signal="pressed" from="MC/VBC/Multifile" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="MC/VBC/Prefix" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/GenererLister" to="." method="_on_GenererLister_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/Reload" to="." method="_on_Reload_pressed"]
